Migrate to Spring Boot 3.4.1 Moved the backend application from running on WildFly to running on the embedded TomCat server provided by the Spring framework.

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .DS_Store
-.vscode/settings.json
+.vscode/*
 
 frontend/web_server/static/
-backend/engine/wildfly-configuration-*.jar
+backend/engine/config/*
