--- a/backend/engine/pom.xml
+++ b/backend/engine/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>io.github.robert_f_ruff</groupId>
 	<artifactId>rules_engine</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>Rules Engine</name>
 	<description>Personal portfolio project showcasing knowledge and skills.</description>
 	<url/>
