--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,5 +1,5 @@
-Django==5.1.4
+django==5.1.5
 gunicorn==23.0.0
-mysqlclient==2.2.6
+mysqlclient==2.2.7
 python-dotenv==1.0.1
-Requests==2.32.3
+requests==2.32.3
